--- a/scouts/app/app.yaml
+++ b/scouts/app/app.yaml
@@ -15,7 +15,8 @@ libraries:
   version: "2.5.1"
 - name: django
   version: latest
-  
+- name: jinja2
+  version: latest
 
 handlers:
 # Cron jobs and other secured things
@@ -65,3 +66,4 @@ handlers:
 # All other requests go to app.py
 - url: /.*
   script: app.application
+
